--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "mocha tests"
   },
   "author": "Manuel Ernst <manuel.ernst@thomann.de>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cookiefactory/fuzzystringmatch"
+  },
   "license": "MIT",
   "dependencies": {
     "debug": "^2.2.0",
