--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "commonsubstrings": "^1.1.2",
     "debug": "^2.2.0",
     "dedupe": "^1.0.2",
     "hirestime": "^2.1.0"
